[package]
name = "hyperspace-rpc-rs"
version = "0.1.0"
authors = ["Timo Tiuraniemi <timo.tiuraniemi@iki.fi>"]

[dependencies]
protobuf = { git = "https://github.com/stepancheg/rust-protobuf", rev = "b447f53014af46a7faf6bf46d313391a61b2eace" }

[build-dependencies]
reqwest = { version = "0.10", features = ["blocking"] }
protobuf-codegen-pure = { git = "https://github.com/stepancheg/rust-protobuf", rev = "b447f53014af46a7faf6bf46d313391a61b2eace" }
